--- a/cond_notebooks/sequential_dataset.ipynb
+++ b/cond_notebooks/sequential_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 119,
    "id": "fb964098-6d60-40f5-8476-baa319e1057a",
    "metadata": {},
    "outputs": [],
@@ -10,8 +10,10 @@
     "import os\n",
     "import re\n",
     "import cv2\n",
+    "from PIL import Image\n",
     "from skimage.metrics import structural_similarity\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from torch.utils.data import DataLoader, Dataset"
    ]
   },
   {
@@ -283,40 +285,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "4ac496e1-276f-4003-8e5e-a3f3cb4e7ff8",
+   "execution_count": 120,
+   "id": "9f773654-2079-42c0-9bcd-6a33c9bfbfa4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle"
+    "class SkyDataset(Dataset):\n",
+    "    def __init__(self, root_data_folder=\"/projects/SkyGAN/clouds_fisheye\", desc_file=\"processed_1K_JPGs.txt\", transform=None, seq_len=2):\n",
+    "        self._root_data_folder = root_data_folder\n",
+    "        self._desc_file = desc_file\n",
+    "        \n",
+    "        image_path_list = self._get_image_paths()\n",
+    "        image_path_dict = self._image_paths_to_dict(image_path_list)\n",
+    "        image_seq_splitted_dict = self._split_lists(image_path_dict)\n",
+    "        image_seq_splitted_list = self._get_lists(image_seq_splitted_dict)\n",
+    "        self._image_path_list = self._seq_to_pairs(image_seq_splitted_list, seq_len)\n",
+    "\n",
+    "        \n",
+    "        self._n_samples = len(self._image_path_list)\n",
+    "        \n",
+    "        self._transform = transform\n",
+    "\n",
+    "    def _extract_number(self, file_name):\n",
+    "        match = re.search(r'_(\\d+)\\.', file_name)\n",
+    "        if match:\n",
+    "            return int(match.group(1))\n",
+    "        return 0\n",
+    "\n",
+    "    def _get_image_paths(self):\n",
+    "        file_path = os.path.join(self._root_data_folder, self._desc_file)\n",
+    "        try:\n",
+    "            with open(file_path) as f:\n",
+    "                paths = f.read().strip().split('\\n')\n",
+    "                paths = list(map(lambda x: os.path.join(self._root_data_folder, x), paths))\n",
+    "            return paths\n",
+    "        except FileNotFoundError:\n",
+    "            raise FileNotFoundError(f\"Could not find file {self._desc_file} enumerating all image paths\")\n",
+    "        except IOError:\n",
+    "            raise IOError(f\"An IOError occured while reading file {file_path}. Check correctness of the contents\")\n",
+    "\n",
+    "    def _image_paths_to_dict(self, paths):\n",
+    "        locations_map = {}\n",
+    "        for path in paths:\n",
+    "            full_path, file = os.path.split(path)\n",
+    "            if full_path in locations_map:\n",
+    "                locations_map[full_path].append(file)\n",
+    "            else:\n",
+    "                locations_map[full_path] = [file]\n",
+    "                \n",
+    "        for path in locations_map:\n",
+    "            locations_map[path] = sorted(locations_map[path], key=self._extract_number)\n",
+    "            \n",
+    "        return locations_map\n",
+    "\n",
+    "    def _get_most_common_offset(self, filenames):\n",
+    "        offsets = {}\n",
+    "        for i in range(len(filenames) - 1):\n",
+    "            current = extract_number(filenames[i])\n",
+    "            next = extract_number(filenames[i + 1])\n",
+    "            if (next - current) in offsets:\n",
+    "                offsets[(next - current)] += 1\n",
+    "            else:\n",
+    "                offsets[(next - current)] = 1\n",
+    "    \n",
+    "        max_offset = max(offsets, key = lambda x: offsets[x])\n",
+    "        return max_offset\n",
+    "\n",
+    "    def _split_lists(self, locations_map):\n",
+    "        res_dict = {}\n",
+    "        for path in locations_map:\n",
+    "            offset = get_most_common_offset(locations_map[path])\n",
+    "            \n",
+    "            prev_number = extract_number(locations_map[path][0])\n",
+    "            main_list = []\n",
+    "            temp_list = [locations_map[path][0]]\n",
+    "            \n",
+    "            for i in range(1, len(locations_map[path])):\n",
+    "                order_number = extract_number(locations_map[path][i])\n",
+    "                if (order_number - prev_number) == offset:\n",
+    "                    temp_list.append(locations_map[path][i])\n",
+    "                else:\n",
+    "                    main_list.append(temp_list)\n",
+    "                    temp_list = [locations_map[path][i]]\n",
+    "                prev_number = order_number\n",
+    "            if temp_list:\n",
+    "                main_list.append(temp_list)\n",
+    "            res_dict[path] = main_list\n",
+    "            \n",
+    "        return res_dict\n",
+    "\n",
+    "    def _get_lists(self, splitted_locations_map):\n",
+    "        res = []\n",
+    "        for root_path in splitted_locations_map:\n",
+    "            for seq in splitted_locations_map[root_path]:\n",
+    "                if len(seq) > 1:\n",
+    "                    res.append(list(map(lambda x: os.path.join(root_path, x), seq)))\n",
+    "        return res\n",
+    "\n",
+    "    def _seq_to_pairs(self, sequential_paths, seq_len):\n",
+    "        res = []\n",
+    "        for seq in sequential_paths:\n",
+    "            if len(seq) < seq_len:\n",
+    "                continue\n",
+    "    \n",
+    "            for i in range(len(seq) - (seq_len - 1)):\n",
+    "                tmp = []\n",
+    "                \n",
+    "                for j in range(seq_len): \n",
+    "                    tmp.append(seq[i + j])\n",
+    "                res.append(tmp)\n",
+    "        return res\n",
+    "\n",
+    "    def __getitem__(self, item):\n",
+    "        initial = Image.open(self._image_path_list[item][0])\n",
+    "        prediction = Image.open(self._image_path_list[item][1])\n",
+    "\n",
+    "        if self._transform:\n",
+    "            initial = self._transform(initial)\n",
+    "            prediction = self._transform(prediction)\n",
+    "\n",
+    "        return initial, prediction\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self._image_path_list)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "12390446-07d4-4438-9db5-984835cd86e9",
+   "execution_count": 121,
+   "id": "bbb4b094-0767-422a-90a9-57f9a01dbaad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/sequential_images.pkl', 'wb') as f:\n",
-    "    pickle.dump(sequential_paths, f)"
+    "sd = SkyDataset()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "d10b0534-c587-4022-bbfb-c6c3aff37a35",
+   "execution_count": 138,
+   "id": "71a6a328-10bf-4cb8-a2be-f1fa78f0e079",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/sequential_images.pkl', 'rb') as f:\n",
-    "    sequential_paths_loaded = pickle.load(f)"
+    "sd[5000][0].save(\"image1.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "10e1418d-aea0-498a-ae92-6691fa9ba722",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sd[5000][1].save(\"image2.jpg\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f773654-2079-42c0-9bcd-6a33c9bfbfa4",
+   "id": "24615dc5-7708-4a91-b130-6a9834c01316",
    "metadata": {},
    "outputs": [],
    "source": []
