--- a/uncond_notebooks/ddpm_training.ipynb
+++ b/uncond_notebooks/ddpm_training.ipynb
@@ -12,8 +12,7 @@
     "from PIL import Image\n",
     "from dataclasses import dataclass\n",
     "import torchvision.transforms as transforms\n",
-    "from torch.utils.data import DataLoader, Dataset\n",
-    "from dataclasses import dataclass"
+    "from torch.utils.data import DataLoader, Dataset"
    ]
   },
   {
