--- a/research/conditional_generation/sampling_evaluation.ipynb
+++ b/research/conditional_generation/sampling_evaluation.ipynb
@@ -23,9 +23,20 @@
     "from metrics import (apply_mask, average_deviation, compute_batch_mse,\n",
     "                     compute_batch_psnr, compute_batch_ssim)\n",
     "from PIL import Image, ImageSequence\n",
-    "from torch.utils.data import DataLoader, Dataset\n",
+    "from torch.utils.data import DataLoader\n",
     "from torch_utils import randn_tensor\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "MODEL_PATH = \"conditional_ddpm.pt\""
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "882ba970a6bb321c"
   },
   {
    "cell_type": "code",
@@ -474,7 +485,7 @@
     }
    ],
    "source": [
-    "model.load_state_dict(torch.load(\"model252.pt\"))\n",
+    "model.load_state_dict(torch.load(MODEL_PATH))\n",
     "model.to(\"cuda\")"
    ]
   },
