--- a/research/conditional_video_generation/sampling.ipynb
+++ b/research/conditional_video_generation/sampling.ipynb
@@ -28,6 +28,17 @@
   },
   {
    "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "MODEL_PATH = \"conditional_ramvid.pt\""
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d8d6077f71c010e8"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "416fe895-4d99-4091-a67f-f409d716c02a",
    "metadata": {},
@@ -109,7 +120,7 @@
    ],
    "source": [
     "dist_util.setup_dist()\n",
-    "logger.configure(dir=\"/home/s_gladkykh/thesis/sky-diffusion/ramvid_notebooks/logs_sampling\")"
+    "logger.configure(dir=\"logs_sampling\")"
    ]
   },
   {
@@ -172,8 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import imageio"
+    "import numpy as np"
    ]
   },
   {
@@ -208,7 +218,7 @@
     ")\n",
     "\n",
     "model.load_state_dict(\n",
-    "    dist_util.load_state_dict(f\"/home/s_gladkykh/thesis/sky-diffusion/ramvid_notebooks/logs3/model120000.pt\", map_location=\"cpu\")\n",
+    "    dist_util.load_state_dict(MODEL_PATH, map_location=\"cpu\")\n",
     ")\n",
     "model.to(dist_util.dev())\n",
     "model.eval()\n",
@@ -218,6 +228,7 @@
     "all_videos = []\n",
     "all_gt = []\n",
     "generated_num = 0\n",
+    "os.makedirs(args.output_dir, exist_ok=True)\n",
     "while generated_num < args.n_samples:\n",
     "    if args.cond_generation:\n",
     "        video, _ = next(data)\n",
