--- a/research/unconditional_generation/sampling.ipynb
+++ b/research/unconditional_generation/sampling.ipynb
@@ -17,6 +17,17 @@
   },
   {
    "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "MODEL_PATH = \"unconditional_ddpm.pt\""
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "219ff6a3174a16c5"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "d6c3cc01-4135-42a9-899b-d7d3f8aad125",
    "metadata": {},
@@ -29,8 +40,6 @@
     "    gradient_accumulation_steps = 1\n",
     "    batch_size = 1\n",
     "    n_samples = 5\n",
-    "\n",
-    "    model_path = \"sky_diffusion_128_lr1e-4_bs16_e1000/models/model585.pt\"\n",
     "    output_dir = \"sampling\"\n",
     "\n",
     "\n",
@@ -405,7 +414,7 @@
     }
    ],
    "source": [
-    "model.load_state_dict(torch.load(config.model_path))\n",
+    "model.load_state_dict(torch.load(MODEL_PATH))\n",
     "model.to(\"cuda\")"
    ]
   },
