--- a/research/unconditional_video_generation/sampling.ipynb
+++ b/research/unconditional_video_generation/sampling.ipynb
@@ -8,12 +8,24 @@
    "outputs": [],
    "source": [
     "from dataclasses import dataclass\n",
+    "import os\n",
     "\n",
     "import numpy as np\n",
     "import torch\n",
     "from PIL import Image\n",
     "from video_diffusion_pytorch import GaussianDiffusion, Trainer, Unet3D"
    ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "MODEL_PATH = \"unconditional_vdm.pt\""
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ee08e0df168c2a4"
   },
   {
    "cell_type": "code",
@@ -27,6 +39,7 @@
     "    image_size = 64\n",
     "    batch_size = 1\n",
     "    num_samples = 1\n",
+    "    output_dir = \"samples\"\n",
     "\n",
     "config = Config()"
    ]
@@ -62,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "fbd9627a-e761-4b5c-81c5-0f39f8b912ef",
    "metadata": {},
    "outputs": [
@@ -86,7 +99,7 @@
     "    ema_decay = 0.995,\n",
     "    amp = True\n",
     ")\n",
-    "data = torch.load(\"results/model-97.pt\")\n",
+    "data = torch.load(MODEL_PATH)\n",
     "trainer.step = data['step']\n",
     "trainer.model.load_state_dict(data['model'])\n",
     "trainer.ema_model.load_state_dict(data['ema'])\n",
@@ -95,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "f358490a-853b-49e7-8d52-0c0b17804c8b",
    "metadata": {},
    "outputs": [],
@@ -113,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "7a1f376b-1273-49c0-838c-9d2b43889255",
    "metadata": {},
    "outputs": [
@@ -121,22 +134,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "sampling loop time step: 100%|█████████████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:31<00:00, 10.92it/s]\n"
+      "sampling loop time step: 100%|█████████████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:31<00:00, 10.96it/s]\n"
      ]
     }
    ],
    "source": [
     "generated_samples = 0\n",
+    "os.makedirs(config.output_dir, exist_ok=True)\n",
     "while generated_samples < config.num_samples:\n",
     "    gen = trainer.model.sample(batch_size = config.batch_size)\n",
     "    for j in range(0, config.batch_size):\n",
-    "        create_gif(gen[j].permute(1,2,3,0).cpu().numpy(), f\"test/{generated_samples+j}.gif\")\n",
+    "        create_gif(gen[j].permute(1,2,3,0).cpu().numpy(), f\"{config.output_dir}/{generated_samples+j}.gif\")\n",
     "    generated_samples += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "e0a25f80-3383-4fc5-8fb2-9ee54bab04a6",
    "metadata": {},
    "outputs": [
@@ -146,7 +160,7 @@
        "torch.Size([1, 3, 20, 64, 64])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
