--- a/research/conditional_generation/sampling_evaluation.ipynb
+++ b/research/conditional_generation/sampling_evaluation.ipynb
@@ -18,10 +18,9 @@
     "import torchvision.transforms as transforms\n",
     "from accelerate import Accelerator\n",
     "from cond_sky_dataset import SkyDataset\n",
-    "from diffusers import DDPMScheduler, DiffusionPipeline, ImagePipelineOutput\n",
+    "from diffusers import DDPMScheduler, DiffusionPipeline, ImagePipelineOutput, UNet2DModel\n",
     "from matplotlib.ticker import MaxNLocator\n",
-    "from metrics import (apply_mask, average_deviation, compute_batch_mse,\n",
-    "                     compute_batch_psnr, compute_batch_ssim)\n",
+    "from metrics import apply_mask, average_deviation, compute_batch_mse, compute_batch_psnr, compute_batch_ssim\n",
     "from PIL import Image, ImageSequence\n",
     "from torch.utils.data import DataLoader\n",
     "from torch_utils import randn_tensor\n"
@@ -122,8 +121,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from diffusers import UNet2DModel\n",
-    "\n",
     "model = UNet2DModel(\n",
     "    sample_size=config.image_size,\n",
     "    in_channels=3 * config.seq_len,\n",
