--- a/research/conditional_video_generation/evaluation.ipynb
+++ b/research/conditional_video_generation/evaluation.ipynb
@@ -11,8 +11,7 @@
     "\n",
     "import torch\n",
     "from diffusion_openai.video_datasets import load_data\n",
-    "from metrics import (apply_mask, average_deviation, compute_batch_mse,\n",
-    "                     compute_batch_psnr, compute_batch_ssim)\n",
+    "from metrics import apply_mask, average_deviation, compute_batch_mse, compute_batch_psnr, compute_batch_ssim\n",
     "from PIL import Image, ImageSequence"
    ]
   },
