removed dataset dependency for sampling

--- a/research/conditional_generation/sampling_evaluation.ipynb
+++ b/research/conditional_generation/sampling_evaluation.ipynb
@@ -17,7 +17,7 @@
     "import torch\n",
     "import torchvision.transforms as transforms\n",
     "from accelerate import Accelerator\n",
-    "from cond_sky_dataset import SkyDataset\n",
+    "from gif_dataset import GIFDataset\n",
     "from diffusers import DDPMScheduler, DiffusionPipeline, ImagePipelineOutput, UNet2DModel\n",
     "from matplotlib.ticker import MaxNLocator\n",
     "from metrics import apply_mask, average_deviation, compute_batch_mse, compute_batch_psnr, compute_batch_ssim\n",
@@ -517,7 +517,7 @@
     "        transforms.Normalize([0.5], [0.5])\n",
     "    ]\n",
     ")\n",
-    "dataset = SkyDataset(transform=preprocess, seq_len=21, offset=1)\n",
+    "dataset = GIFDataset(\"../../conditioning\", transform=preprocess)\n",
     "train_dataloader = DataLoader(dataset=dataset, batch_size=config.batch_size, shuffle=True)"
    ]
   },
@@ -528,7 +528,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sequence = next(iter(train_dataloader))[0]"
+    "sequence = next(iter(train_dataloader)).view(config.batch_size, -1, config.image_size, config.image_size)"
    ]
   },
   {
