--- a/research/conditional_video_generation/sampling.ipynb
+++ b/research/conditional_video_generation/sampling.ipynb
@@ -59,7 +59,7 @@
     "    data_dir=''\n",
     "    save_gt=False\n",
     "    seed=42\n",
-    "    data_dir=\"/home/s_gladkykh/thesis/gif_dataset_64\"\n",
+    "    data_dir=\"../../conditioning\"\n",
     "    image_size=64\n",
     "    class_cond=False\n",
     "    deterministic=False\n",
@@ -145,7 +145,7 @@
     "cond_frames = []\n",
     "if args.cond_generation:\n",
     "    data = load_data(\n",
-    "        data_dir=\"/home/s_gladkykh/thesis/gif_dataset_64\",\n",
+    "        data_dir=args.data_dir,\n",
     "        batch_size=1,\n",
     "        image_size=64,\n",
     "        class_cond=False,\n",
