--- a/research/conditional_video_generation/training.ipynb
+++ b/research/conditional_video_generation/training.ipynb
@@ -121,7 +121,7 @@
    ],
    "source": [
     "dist_util.setup_dist()\n",
-    "logger.configure(dir=\"/home/s_gladkykh/thesis/sky-diffusion/ramvid_notebooks/logs3\")\n",
+    "logger.configure(dir=\"logs\")\n",
     "for key, item in model_parameters.items():\n",
     "    logger.logkv(key, item)\n",
     "logger.dumpkvs()"
