conditioning files added

--- a/research/conditional_generation/sampling_evaluation.ipynb
+++ b/research/conditional_generation/sampling_evaluation.ipynb
@@ -517,7 +517,7 @@
     "        transforms.Normalize([0.5], [0.5])\n",
     "    ]\n",
     ")\n",
-    "dataset = GIFDataset(\"../../conditioning\", transform=preprocess)\n",
+    "dataset = GIFDataset(\"../../data_samples/gif_128\", transform=preprocess)\n",
     "train_dataloader = DataLoader(dataset=dataset, batch_size=config.batch_size, shuffle=True)"
    ]
   },
