--- a/research/conditional_video_generation/sampling.ipynb
+++ b/research/conditional_video_generation/sampling.ipynb
@@ -59,7 +59,7 @@
     "    data_dir=''\n",
     "    save_gt=False\n",
     "    seed=42\n",
-    "    data_dir=\"../../conditioning\"\n",
+    "    data_dir=\"../../data_samples/gif_64\"\n",
     "    image_size=64\n",
     "    class_cond=False\n",
     "    deterministic=False\n",
