--- a/research/conditional_video_generation/sampling.ipynb
+++ b/research/conditional_video_generation/sampling.ipynb
@@ -28,18 +28,19 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "MODEL_PATH = \"conditional_ramvid.pt\""
-   ],
+   "execution_count": 2,
+   "id": "d8d6077f71c010e8",
    "metadata": {
     "collapsed": false
    },
-   "id": "d8d6077f71c010e8"
+   "outputs": [],
+   "source": [
+    "MODEL_PATH = \"/home/s_gladkykh/thesis/sky-diffusion/ramvid_notebooks/logs3/ema_0.9999_120000.pt\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "416fe895-4d99-4091-a67f-f409d716c02a",
    "metadata": {},
    "outputs": [],
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "be4405d1-1954-4442-b5fb-6e8f82190902",
    "metadata": {},
    "outputs": [],
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d0c39d9b-13a3-4c8e-8fd4-4a5ecc470c43",
    "metadata": {},
    "outputs": [
@@ -114,7 +115,7 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "Logging to /home/s_gladkykh/thesis/sky-diffusion/ramvid_notebooks/logs_sampling\n"
+      "Logging to logs_sampling\n"
      ]
     }
    ],
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a1d1194e-412d-4f6b-8ed2-d2f850368035",
    "metadata": {},
    "outputs": [
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a09d4105-005a-452e-8d59-f55a0ccc8bed",
    "metadata": {},
    "outputs": [],
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "407ee2fe-0216-4a86-afbc-86acdfdb33f4",
    "metadata": {},
    "outputs": [
@@ -259,29 +260,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7ce3e6c3-cd21-4fca-8b4e-b08d3eaf6267",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 20, 64, 64, 3)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sample.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8ee3b294-8b36-43a5-8c0a-aaed7c89ec8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 20, 3, 64, 64])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "all_videos[0].view(-1,20,3,64,64).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ef2b659e-90eb-46a4-92c1-4413b0e70b17",
-   "metadata": {},
    "outputs": [],
    "source": [
     "for frame in range(20):\n",
@@ -289,15 +309,11 @@
     "\n",
     "    plt.imshow(imag)    \n",
     "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1061053-96b3-48f6-bc4b-a19a2ff7dcc4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e2f27c6d04cc6bc5"
   }
  ],
  "metadata": {
