--- a/research/conditional_generation/sampling_evaluation.ipynb
+++ b/research/conditional_generation/sampling_evaluation.ipynb
@@ -17,13 +17,15 @@
     "import torch\n",
     "import torchvision.transforms as transforms\n",
     "from accelerate import Accelerator\n",
-    "from gif_dataset import GIFDataset\n",
+    "# from cond_sky_dataset import SkyDataset\n",
+    "# from torch.utils.data import DataLoader\n",
     "from diffusers import DDPMScheduler, DiffusionPipeline, ImagePipelineOutput, UNet2DModel\n",
     "from matplotlib.ticker import MaxNLocator\n",
     "from metrics import apply_mask, average_deviation, compute_batch_mse, compute_batch_psnr, compute_batch_ssim\n",
     "from PIL import Image, ImageSequence\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torch_utils import randn_tensor\n"
+    "\n",
+    "from torch_utils import randn_tensor\n",
+    "from video_datasets import load_data"
    ]
   },
   {
@@ -517,8 +519,17 @@
     "        transforms.Normalize([0.5], [0.5])\n",
     "    ]\n",
     ")\n",
-    "dataset = GIFDataset(\"../../data_samples/gif_128\", transform=preprocess)\n",
-    "train_dataloader = DataLoader(dataset=dataset, batch_size=config.batch_size, shuffle=True)"
+    "# dataset = SkyDataset(transform=preprocess, seq_len=21, offset=1)\n",
+    "# train_dataloader = DataLoader(dataset=dataset, batch_size=config.batch_size, shuffle=True)\n",
+    "train_dataloader = load_data(\n",
+    "    data_dir=\"../../data_samples/gif_128\",\n",
+    "    batch_size=config.batch_size,\n",
+    "    image_size=128,\n",
+    "    class_cond=False,\n",
+    "    deterministic=True,\n",
+    "    rgb=True,\n",
+    "    seq_len=20\n",
+    ")"
    ]
   },
   {
@@ -528,19 +539,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sequence = next(iter(train_dataloader)).view(config.batch_size, -1, config.image_size, config.image_size)"
+    "original, _ = next(iter(train_dataloader))\n",
+    "original_seq = [torch.squeeze(original.permute(0, 2, 1, 3, 4)[:,i:i+1], dim=1) for i in range(20)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "74fdaec5-55f9-4edb-85e9-4616a6e9f9f1",
-   "metadata": {},
    "outputs": [],
    "source": [
-    "original_seq = sequence.view(config.batch_size, 20, 3, config.image_size, config.image_size)\n",
-    "original_seq = [original_seq[:,i:i+1].view(config.batch_size, 3, config.image_size, config.image_size) for i in range(20)]"
-   ]
+    "original_seq[0].shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2847b3ccf1dba5a5"
   },
   {
    "cell_type": "code",
